--- a/index.qmd
+++ b/index.qmd
@@ -55,7 +55,7 @@ Emily Stens
 
 ### Former Members
 
-Researcher Staff: Shannon Merkle, Jonathan Reid, Katrina Ternus
+Researcher Staff: Manuel (Manolo) Castellote, Jonathan Reid, Katrina Ternus
 
 Graduate Students: Sierra Jarriel, Itzel Perez Carballo
 
