--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ page-layout: full
 
 *Rice’s whale (Balaenoptera ricei). Credit: NOAA Fisheries (MMPA Permit #21938)*
 
-The Passive Acoustic Ecology Program conducts a variety of [research projects](https://www.fisheries.noaa.gov/science-data/passive-acoustic-research-southeast-fisheries-science-center) that use passive acoustics to assess populations and improve our understanding of cetaceans in the Gulf of Mexico and U.S. waters of the Western Atlantic. We are part of the Marine Mammal and Turtle Division at NOAA's Southeast Fisheries Science Center in Miami, Florida.
+The Passive Acoustic Ecology Program conducts a variety of [research projects](https://www.fisheries.noaa.gov/science-data/passive-acoustic-research-southeast-fisheries-science-center){target="_blank"} that use passive acoustics to assess populations and improve our understanding of cetaceans in the Gulf of Mexico and U.S. waters of the Western Atlantic. We are part of the Marine Mammal and Turtle Division at NOAA's Southeast Fisheries Science Center in Miami, Florida.
 
 This lab manual serves as the go-to handbook for the behind-the-scenes information to support our science. It serves as a document for keeping institutional knowledge by providing information on various procedures, field methods, analyses, inventories, and available resources, among other things.
 
@@ -18,7 +18,7 @@ This lab manual serves as the go-to handbook for the behind-the-scenes informati
 
 ### Program Lead
 
-[Melissa Soldevilla](https://www.fisheries.noaa.gov/contact/melissa-soldevilla-phd)
+[Melissa Soldevilla](https://www.fisheries.noaa.gov/contact/melissa-soldevilla-phd){target="_blank"}
 <!-- Passive Acoustic Ecology Program Lead -->
 
 ### Researchers
@@ -27,21 +27,21 @@ Emma Beretta, Data management
 
 <!-- Manuel (Manolo) Castellote, Lead for North Atlantic Right Whale studies -->
 
-[Amanda Debich](https://www.fisheries.noaa.gov/contact/amanda-debich), Lead acoustic technician for Rice’s whale studies
+[Amanda Debich](https://www.fisheries.noaa.gov/contact/amanda-debich){target="_blank"}, Lead acoustic technician for Rice’s whale studies
 
-[Heloise Frouin-Mouy](https://www.fisheries.noaa.gov/contact/heloise-frouin-mouy-phd), Assistant scientist for LISTEN GoMex project, odontocete density estimation
+[Heloise Frouin-Mouy](https://www.fisheries.noaa.gov/contact/heloise-frouin-mouy-phd){target="_blank"}, Assistant scientist for LISTEN GoMex project, odontocete density estimation
 
-[Lynne Hodge](https://www.fisheries.noaa.gov/contact/lynne-hodge-phd), Acoustic technician for LISTEN GoMex project, shipping noise and marine mammal characterization
+[Lynne Hodge](https://www.fisheries.noaa.gov/contact/lynne-hodge-phd){target="_blank"}, Acoustic technician for LISTEN GoMex project, shipping noise and marine mammal characterization
 
 Shannon Merkle, North Atlantic Right Whale acoustic analyses
 
 Nicole Pegg, North Atlantic Right Whale acoustic analyses
 
-[Ludovic Tenorio-Halle](https://www.fisheries.noaa.gov/contact/ludovic-tenorio-halle-phd), Rice’s whale studies, propagation modeling, ambient noise
+[Ludovic Tenorio-Halle](https://www.fisheries.noaa.gov/contact/ludovic-tenorio-halle-phd){target="_blank"}, Rice’s whale studies, propagation modeling, ambient noise
 
 ### Graduate Students
 
-[Ashley Cook](https://www.fisheries.noaa.gov/contact/ashley-cook), Doctoral student at University of Miami, Rice’s whale studies
+[Ashley Cook](https://www.fisheries.noaa.gov/contact/ashley-cook){target="_blank"}, Doctoral student at University of Miami, Rice’s whale studies
 
 ### Interns
 
@@ -83,18 +83,18 @@ Passive acoustic monitoring requires specialized equipment and produces a lot of
 
 The agencies we work with include:
 
--   [Scripps Whale Acoustics Lab](https://www.cetus.ucsd.edu/)
--   [Scripps Machine Listening Lab](https://sioml.ucsd.edu/)
--   [Universidad Veracruzana - Serrano Lab](https://www.uv.mx/personal/arserrano/)
--   [Universidad Nacional Autónoma de Mexico - Gracia Lab](https://www.icmyl.unam.mx/quienes_somos/personal_academico/gracia-gasca-adolfo)
--   [NOAA Atlantic Oceanographic and Meteorological Laboratory](https://www.aoml.noaa.gov/people/matthieu-le-henaff/)
--   [NOAA National Centers for Environmental Information](https://www.ncei.noaa.gov/products/passive-acoustic-data)
--   [NOAA Northeast Fisheries Science Center](https://www.fisheries.noaa.gov/new-england-mid-atlantic/endangered-species-conservation/passive-acoustic-research-northeast)
+-   [Scripps Whale Acoustics Lab](https://www.cetus.ucsd.edu/){target="_blank"}
+-   [Scripps Machine Listening Lab](https://sioml.ucsd.edu/){target="_blank"}
+-   [Universidad Veracruzana - Serrano Lab](https://www.uv.mx/personal/arserrano/){target="_blank"}
+-   [Universidad Nacional Autónoma de Mexico - Gracia Lab](https://www.icmyl.unam.mx/quienes_somos/personal_academico/gracia-gasca-adolfo){target="_blank"}
+-   [NOAA Atlantic Oceanographic and Meteorological Laboratory](https://www.aoml.noaa.gov/people/matthieu-le-henaff/){target="_blank"}
+-   [NOAA National Centers for Environmental Information](https://www.ncei.noaa.gov/products/passive-acoustic-data){target="_blank"}
+-   [NOAA Northeast Fisheries Science Center](https://www.fisheries.noaa.gov/new-england-mid-atlantic/endangered-species-conservation/passive-acoustic-research-northeast){target="_blank"}
 
 ## Additional National Marine Fisheries Acoustics Lab Manuals
 
--   [AFSC: Alaska Fisheres](https://noaa-afsc.github.io/AFSC-MML-PAM-Lab-Manual/)
--   [NEFSC: Northeast Fisheries](https://nefsc.github.io/NEFSC_PAB_lab_manual/)
--   [NWFSC: Northwest Fisheries](https://noaa-nwfsc.github.io/NWFSC-PAM-Lab-Manual/)
--   [SWFSC: Southwest Fisheries](https://sael-swfsc.github.io/SAEL-lab-manual/)
--   [National PAM Network](https://nmfs-ost.github.io/PAM_National_NMFS_Network/)
+-   [AFSC: Alaska Fisheres](https://noaa-afsc.github.io/AFSC-MML-PAM-Lab-Manual/){target="_blank"}
+-   [NEFSC: Northeast Fisheries](https://nefsc.github.io/NEFSC_PAB_lab_manual/){target="_blank"}
+-   [NWFSC: Northwest Fisheries](https://noaa-nwfsc.github.io/NWFSC-PAM-Lab-Manual/){target="_blank"}
+-   [SWFSC: Southwest Fisheries](https://sael-swfsc.github.io/SAEL-lab-manual/){target="_blank"}
+-   [National PAM Network](https://nmfs-ost.github.io/PAM_National_NMFS_Network/){target="_blank"}
